downgrade syntax to java 8