@@ -1,6 +1,7 @@
 package com.example.demo;
 
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 // https://www.hackerrank.com/challenges/java-string-compare/problem
@@ -9,11 +10,11 @@ class SubstringComparison {
         List<Character> uniqueChars = s.codePoints().distinct()
                 .mapToObj(c -> (char) c)
                 .sorted()
-                .toList();
+                .collect(Collectors.toList());
 
-        var substrings = IntStream.range(0, s.toCharArray().length - k + 1)
+        List<String> substrings = IntStream.range(0, s.toCharArray().length - k + 1)
                 .mapToObj(i -> s.substring(i, i + k))
-                .toList();
+                .collect(Collectors.toList());
 
         String smallest = findSmallest(substrings, uniqueChars, 0);
         String largest = findLargest(substrings, uniqueChars, uniqueChars.size() - 1);
@@ -22,14 +23,14 @@ class SubstringComparison {
     }
 
     private static String findSmallest(List<String> substrings, List<Character> uniqueChars, int index) {
-        var candidates = findCandidates(substrings, uniqueChars, index);
+        List<String> candidates = findCandidates(substrings, uniqueChars, index);
         return candidates.isEmpty()
                 ? findSmallest(substrings, uniqueChars, index + 1)
                 : candidates.getFirst();
     }
 
     private static String findLargest(List<String> substrings, List<Character> uniqueChars, int index) {
-        var candidates = findCandidates(substrings, uniqueChars, index);
+        List<String> candidates = findCandidates(substrings, uniqueChars, index);
         return candidates.isEmpty()
                 ? findLargest(substrings, uniqueChars, index - 1)
                 : candidates.getLast();
@@ -40,6 +41,6 @@ class SubstringComparison {
         return substrings.stream()
                 .filter(s -> s.startsWith(String.valueOf(c)))
                 .sorted()
-                .toList();
+                .collect(Collectors.toList());
     }
 }
